feat: support persistent Q&A ordering and stabilize project status handling